# posting-ads

./: .gitignore  Dockerfile  docker-compose.prod.yaml  docker-compose.yaml  entrypoint.celery.sh  pyproject.toml  security.md  setup.cfg  swagger.yaml
server/: dump-16-12-2021.json  import_data.txt  pyproject.toml  setup.cfg  sqlite_clear_main.sql
server/apps/api/: apps.py  permissions.py  routers.py  serializers.py  urls.py  viewsets.py
server/apps/main/: _test_logs.py  admin.py  apps.py  consumer.py  forms.py  middleware.py  models.py  schemas.py  signals.py  tasks.py  tests.py  urls.py  views.py
server/apps/main/services/: digest.py  site_search.py
server/apps/main/templatetags/: main_tags_and_filters.py
server/config/: asgi.py  celery.py  gunicorn.py  settings.py  sitemaps.py  urls.py
server/config/migrations/main/: 0001_initial.py  0003_auto_20211024_2117.py  0004_auto_20211024_2133.py  0005_auto_20211025_1655.py  0007_auto_20211027_2041.py  0009_auto_20211030_1545.py  0011_alter_seller_itn.py  0013_subscription_title.py  0014_smslog.py  0015_seller_phone.py  0016_alter_smslog_code.py  0017_auto_20211124_2044.py  0018_alter_smslog_celery_task.py  0019_auto_20211125_1644.py  0020_auto_20211205_0255.py
server/docs/: apps.main.services.rst  apps.main.templatetags.rst  apps.rst  conf.py  config.rst  index.rst  modules.rst  templates.flatpages.rst  templates.main.rst  templates.rst
server/docs/_build/doctrees/: apps.doctree  apps.main.doctree  apps.main.services.doctree  apps.main.templatetags.doctree  config.doctree  config.migrations.doctree  config.migrations.main.doctree  environment.pickle  index.doctree  manage.doctree  modules.doctree  static.doctree  templates.doctree  templates.flatpages.doctree  templates.main.doctree
server/static/js/: ad_list.js  seller_update.js
server/templates/flatpages/: default.html
server/templates/main/: ad_detail.html  ad_list.html  base.html  error_page.html  index.html  seller_update.html
(+92 files in other folders)
