[tool.poetry]
name = "venv"
version = "0.1.0"
description = ""
authors = ["krylovilya1 <krylovilya1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.2.10"
django-ckeditor = "^6.1.0"
django-constance = "^2.8.0"
sorl-thumbnail = "^12.7.0"
Pillow = "^8.4.0"
django-allauth = "^0.45.0"
APScheduler = "^3.8.1"
celery = "^5.2.1"
django-redis = "^5.0.0"
djantic = "^0.4.1"
pydantic = "^1.8.2"
twilio = "^7.3.1"
redis = "4.0.2"
pytest-django = "^4.5.1"
Sphinx = "^4.3.1"
django-stubs = "^1.9.0"
channels = "^3.0.4"
hiredis = "^2.0.0"
channels-redis = "^3.3.1"
factory-boy = "^3.2.1"
psycopg2-binary = "2.9.2"
dj-database-url = "0.5.0"
sentry-sdk = "^1.5.1"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]
coveralls = "3.3.1"
flake8 = "^4.0.1"
django-debug-toolbar = "^3.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
